--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -417,11 +417,11 @@
 
                 <div id="annCard" class="card-body tab-pane">
                     <div class="row">
-                        <button id="createAnnBtn" type="button" class="btn-custom col-11" disabled>Create
+                        <button id="createAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Create
                             Annotation</button>
                     </div>
                     <div class="row">
-                        <button id="toggleAnnBtn" type="button" class="btn-custom col-11" disabled
+                        <button id="toggleAnnBtn" type="button" class="btn btn-secondary col-11" disabled
                             style="width: 60px;">Hide
                             Annotations</button>
                     </div>
