--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
@@ -9,23 +9,34 @@
             box-sizing: border-box;
         }
 
+        .list-group-item {
+            cursor: pointer;
+            padding: 10px 15px;
+            border-bottom: 1px solid #eee;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            /* border-radius: 5px; */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 5px;
+            font-size: 16px;
+            line-height: 1.5;
+            color: #333;
+        }
+
         .list-group-item:hover {
             cursor: pointer;
             background-color: #f0f0f0;
         }
 
         .list-group-item.selected {
-            background-color: #e0e0e0;
+            background-color: #007bff;
+            color: white;
         }
 
 
         .list-group {
-            width: 100%;
-            /* Set table width */
-            table-layout: fixed;
-            /* Enable fixed table layout */
-            border-collapse: collapse;
-            /* Collapse boraders */
+            list-style: none;
+            padding: 0;
+            margin: 0;
         }
 
         .list-group th,
@@ -52,6 +63,8 @@
             top: 0;
             z-index: 1;
         }
+
+
 
         .progress-bar {
             width: 100%;
@@ -244,8 +257,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="filename">TifFile:<span class="required">*</span></label>
-                                <input type="file" class="form-control-file" id="fileInputTiff">
-                                <button type="button" class="btn btn-primary" id="submitBtn">Submit</button>
+                                <div class="flex-row-container"
+                                    style="display: flex; align-items: center; justify-content: space-between;">
+                                    <input type="file" class="form-control-file" id="fileInputTiff">
+                                    <button type="button" class="btn btn-sm btn-primary btn-icon-only" id="submitBtn">Submit</button>
+                                </div>
                                 <span class="file-format-hint">(DatasetName#Modality#Exposure#Wavelength.tif)</span>
                             </div>
                             <div class="form-group">
@@ -283,7 +299,7 @@
                         <div class="col-3">
                             <h5>Institution List</h5>
                             <div id="institutionList" class="table table-striped table-hover"></div>
-                            <button id="newInstitutionBtn" class="btn btn-primary">New</button>
+                            <button id="newInstitutionBtn" class="btn btn-sm btn-primary btn-icon-only">New</button>
                         </div>
                         <!-- Organization details container -->
                         <div class="col-9">
