--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -31,6 +31,91 @@
             cursor: pointer;
             background-color: #f5f5f5;
         }
+
+        #datasetList {
+            border: 1px solid #dee2e6;
+            /* Adds a subtle border around the list */
+            border-radius: 5px;
+            /* Rounds the corners of the list */
+            background: #fff;
+            /* Sets a white background for the list */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            /* Adds a light shadow for depth */
+            padding: 0;
+            /* Removes default padding */
+            margin-top: 20px;
+            /* Adds some space above the list */
+        }
+
+        .list-group {
+            list-style: none;
+            /* Removes default list styling */
+            margin: 0;
+            /* Removes default margin */
+            padding: 0;
+            /* Removes default padding */
+        }
+
+        .list-group-item {
+            display: block;
+            /* Ensures list items take full width */
+            padding: 10px 15px;
+            /* Adds padding for spacing within items */
+            border-bottom: 1px solid #f0f0f0;
+            /* Adds a separator between items */
+            cursor: pointer;
+            /* Changes the cursor to indicate interactivity */
+            transition: background-color 0.2s ease-in-out;
+            /* Smooth transition for background color change */
+        }
+
+        .list-group-item:last-child {
+            border-bottom: none;
+            /* Removes border from the last item */
+        }
+
+        .list-group-item:hover,
+        .list-group-item.selected-dataset {
+            background-color: #e9ecef;
+            /* Changes background color on hover and when selected */
+        }
+
+        .list-group-item:not(.selected-dataset):hover {
+            background-color: #f8f9fa;
+            /* Lighter background color on hover for items not selected */
+        }
+
+        .list-group-item.selected-dataset {
+            background-color: #d1e7fd;
+            /* Distinct background color for selected items */
+            color: #0056b3;
+            /* Changes text color to match the selection */
+            font-weight: bold;
+            /* Makes the text of selected items bold */
+        }
+
+        @media (max-width: 768px) {
+            #datasetList {
+                /* Adjusts padding or margins as needed for smaller screens */
+            }
+
+            .list-group-item {
+                padding: 8px 12px;
+                /* Slightly reduces padding on smaller screens */
+            }
+        }
+
+        .scrollable-table {
+            max-height: 300px;
+            overflow-y: auto;
+            margin-bottom: 20px;
+            /* Adjust as necessary */
+        }
+
+        /* Ensure table width is 100% inside scrollable container */
+        .scrollable-table table {
+            width: 100%;
+        }
     </style>
 </head>
 <div class="container-fluid">
@@ -49,17 +134,21 @@
                         <div class="card border-0">
                             <div class="card-body">
                                 <h5 class="card-title">Dataset List</h5>
-                                <div id="datasetList" class="table table-striped table-hover"></div>
+                                <div class="scrollable-table">
+                                    <table class="table">
+                                        <div id="datasetList" class="table table-striped table-hover"></div>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-2 d-flex align-items-center justify-content-center">
                         <div class="btn-group-vertical">
-                            <button id="addDatasetBtn" type="button" class="btn btn-primary mb-2"
+                            <button id="addDatasetBtn" type="button" class="btn btn-sm btn-primary btn-icon-only"
                                 onclick="addAssignedDataset(selectedUserEmail, selectedDatasetName)">
                                 <i class="bi bi-arrow-right-circle-fill"></i> Add
                             </button>
-                            <button id="removeDatasetBtn" type="button" class="btn btn-primary"
+                            <button id="removeDatasetBtn" type="button" class="btn btn-sm btn-primary btn-icon-only"
                                 onclick="removeAssignedDataset(selectedUserEmail, selectedAssignedDatasetName)">
                                 <i class="bi bi-arrow-left-circle-fill"></i> Remove
                             </button>
@@ -103,7 +192,8 @@
                     </div>
 
                     <div class="form-group">
-                        <button id="createUserBtn" type="submit" class="btn btn-primary">Create</button>
+                        <button id="createUserBtn" type="submit"
+                            class="btn btn-sm btn-primary btn-icon-only">Create</button>
                     </div>
                 </div>
             </div>
@@ -157,7 +247,7 @@
             });
     }
 
-    
+
     document.getElementById("createUserBtn").addEventListener('click', () => {
         //validate
         let email = document.getElementById("email")
