--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -24,7 +24,6 @@
         transition: background-color 0.3s;
     }
 
-
     .cust-full:hover {
         background-color: #0F71F2;
     }
@@ -229,44 +228,44 @@
         margin-top: 70px;
     }
 
-    /* 自定义按钮样式 */
+    /* Custmize style button */
     .btn-custom {
         padding: 5px 15px;
-        /* 增加填充以使按钮更大 */
+        /* Increase filling to make button bigger */
         font-size: 14px;
-        /* 增大字体大小 */
+        /* Increase font */
         border-radius: 25px;
-        /* 圆角边缘 */
+        /* border-radius */
         border: none;
-        /* 移除边框 */
+        /* Remove border */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        /* 添加阴影效果 */
+        /* Add shadow */
         transition: all 0.2s ease;
-        /* 平滑过渡效果 */
+        /* Transition effect */
     }
 
-    /* 调整“Measure”按钮的颜色 */
+    /* Adjust color of Measure */
     .btn-measure {
         background-color: #17a2b8;
         /* Bootstrap的info颜色 */
         color: white;
     }
 
-    /* 调整“Clear”按钮的颜色 */
+    /* Adjust color of Clear */
     .btn-clear {
         background-color: #dc3545;
         /* Bootstrap的danger颜色 */
         color: white;
     }
 
-    /* 鼠标悬停效果 */
+    /* Mouse hover effect */
     .btn-custom:hover {
         transform: translateY(-2px);
-        /* 稍微上移 */
+        /* Move up slightly */
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
     }
 
-    /* 被禁用按钮的样式 */
+    /* Style of banned button */
     .btn-custom:disabled {
         background-color: #cccccc;
         color: #666666;
@@ -274,6 +273,7 @@
         cursor: not-allowed;
     }
 </style>
+
 <div class="container-fluid" style="height: 100vh;">
     <div id="toolsCol" class="col-lg-3 col-md-4 float-left">
         <div id="mySidebar" class="card mt-1 shadow show">
