--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
@@ -14,17 +14,28 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            height: 300px;
+            width: 438px;
+            /* Fixed height */
+            overflow-y: auto;
+            /* Enables vertical scrolling */
+            border: 1px solid #ccc;
         }
 
         .list-group-item {
             padding: 10px 15px;
             border-bottom: 1px solid #eee;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 5px;
             font-size: 16px;
             line-height: 1.5;
             color: #333;
-            transition: background-color 0.3s ease, color 0.3s ease;
+            cursor: pointer;
+            /* Changes cursor on hover */
+            transition: background-color 0.3s ease;
+        }
+
+        .list-group-item:last-child {
+            border-bottom: none;
+            /* Removes border from the last item */
         }
 
         /* 特定于表头的样式 */
@@ -45,6 +56,7 @@
 
         .list-group-item:hover {
             background-color: #f0f0f0;
+            /* Changes background on hover */
         }
 
         .list-group-item.selected {
@@ -238,7 +250,8 @@
                                     <button type="button" class="btn btn-sm btn-primary btn-icon-only"
                                         id="submitBtn">Submit</button>
                                 </div>
-                                <span class="file-format-hint">(DatasetName#Modality#Exposure#Wavelength.tif)</span>
+                                <span
+                                    class="file-format-hint">(InstitutionName#DatasetName#Modality#Exposure#Wavelength.tif)</span>
                             </div>
 
                             <div class="form-group">
@@ -246,7 +259,6 @@
                                     <div class="progress-bar-fill" id="progress-bar-fill">0%</div>
                                 </div>
                             </div>
-
                         </div>
 
                         <!-- Right content, fixed width -->
