--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
@@ -232,8 +232,7 @@
                         <div class="col-md-5">
                             <div class="mb-3">
                                 <div id="filterContainer">
-                                    <label for="institutionFilter">Filter by Institution:</label>
-                                    <select id="institutionFilter">
+                                    <select id="institutionFilter" class="form-control w-auto">
                                         <option value="all">All</option>
                                         <!-- Dynamically add other institution -->
                                     </select>
