--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -189,7 +189,7 @@
 
     #mySidebar {
         height: 90%;
-        width: 360px;
+        width: 400px;
         position: fixed;
         left: 0;
         top: 70px;
@@ -366,12 +366,12 @@
                         </div>
 
                         <div class="form-group col-12">
-                            <select id="planeSelect">
+                            <!-- <select id="planeSelect">
                                 <option value="xy">XY Plane</option>
                                 <option value="xz">XZ Plane</option>
                                 <option value="yz">YZ Plane</option>
-                            </select>
-                            <button id="measureBtn" type="button" class="btn btn-custom btn-measure"
+                            </select> -->
+                            <button id="measureBtn" type="button" class="btn btn-custom btn-measure mr-1"
                                 disabled>Measure</button>
                             <button id="measureClearBtn" type="button" class="btn btn-custom btn-clear mr-1"
                                 disabled>Clear</button>
